# loka

./: .dockerignore  .env.example  .gitignore  API.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_ANALYSIS.md  MONITORING.md  Makefile  OPERATIONS.md  PLAN.md  PRODUCTION_ANALYSIS.md  PROGRESS.md  README.md  SECURITY.md  docker-compose.development.yml  docker-compose.production.yml  loka-stratum.toml  nginx.conf  package-lock.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  docker.yml  migrate.yml  release.yml
docs/: CI-CD-SUMMARY.md  CI-CD.md  DEVELOPMENT.md  DOCKER.md
migration/: Cargo.toml  Dockerfile
migration/src/: lib.rs  m20220101_000001_create_pools_table.rs  m20250822_015441_create_earnings_table.rs  m20250822_021707_create_miners_table.rs  m20250822_021712_create_workers_table.rs  m20250822_021740_create_submissions_table.rs  m20250822_023619_create_distributions_table.rs
model/: Cargo.toml
model/src/: error.rs  lib.rs
model/src/entities/: distributions.rs  earnings.rs  miners.rs  mod.rs  pools.rs  prelude.rs  submissions.rs  workers.rs
model/src/methods/: miners.rs  mod.rs  pools.rs  submissions.rs  workers.rs
monitoring/: .env.example  ERROR-TRACKING-GUIDE.md  README.md  deploy-sentry.sh  docker-compose.yml  error-tracking-stack.yml  test-error-tracking.sh
monitoring/alertmanager/: alertmanager-proxy.yml  alertmanager.yml
monitoring/grafana/: grafana.ini
monitoring/grafana/dashboards/: README.md  error-tracking.json  loka-stratum-complete-metrics.json  loka-stratum-comprehensive.json  loka-stratum-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard-provider.yml
monitoring/loki/: loki-config.yaml  promtail-config.yaml
monitoring/prometheus/: prometheus.development.yml  prometheus.yml
monitoring/prometheus/rules/: error-tracking.yml  loka-stratum.yml
monitoring/sentry/: __init__.py  config.yaml  config.yml  docker-entrypoint.sh  init-sentry.sh  requirements.txt  sentry-init.conf.py  sentry.conf.py
nginx/: nginx.conf
nginx/conf.d/: loka.conf
stratum/: .env.example  ARCHITECTURE.md  BAD_PRACTICES.md  BENCHMARKS.md  BENCHMARK_GUIDE.md  CLAUDE.md  COMPUTATION.md  Cargo.toml  Dockerfile  Dockerfile.slim  IDEA.md  IMPROVEMENTS.md  MEMORY.md  MOCK_MINER.md  MOCK_POOL.md  README.docker.md  README.md  REFACTOR.md  docker-compose.yml  docker-entrypoint.sh  run_benchmarks.sh  test-config.toml  test.Dockerfile  test_auth.py  test_http_connect.py  validate_performance.sh
stratum/benches/: critical_path.rs  new_metrics_performance.rs
stratum/config/: docker.toml  loka-stratum.toml  sentry-example.toml
stratum/monitoring/alertmanager/: alertmanager.yml
stratum/monitoring/grafana/dashboards/: loka-stratum-overview.json  system-overview.json
stratum/monitoring/grafana/provisioning/datasources/: prometheus.yml
stratum/src/: handler.rs  http_proxy.rs  lib.rs  listener.rs  manager.rs  sentry.rs
stratum/src/auth/: manager.rs  mod.rs  state.rs
stratum/src/cli/: args.rs  commands.rs  mod.rs
stratum/src/config/: mod.rs  types.rs  validation.rs
stratum/src/error/: handlers.rs  mod.rs  recovery.rs  security.rs  types.rs  validation.rs
stratum/src/job/: manager.rs  state.rs
stratum/src/miner/: client.rs  config.rs  hashrate.rs  messages.rs  mod.rs  simulator.rs  worker.rs
stratum/src/mock/: config.rs  difficulty.rs  job_manager.rs  mod.rs  pool.rs  responses.rs  validator.rs
stratum/src/network/: connection.rs  handler.rs  manager.rs  mod.rs  processors.rs  proxy.rs  tasks.rs
stratum/src/processor/: manager.rs  messages.rs  mod.rs
stratum/src/protocol/: examples.rs  handler.rs  handler_original.rs  implementations.rs  messages.rs  middleware.rs  mod.rs  parser.rs  pipeline.rs  traits.rs
stratum/src/protocol/handler/: http_handler.rs  message_processor.rs  mod.rs  state_manager.rs  stratum_handler.rs
stratum/src/protocol/types/: method.rs  request.rs  response.rs
stratum/src/services/: caching.rs  database.rs  metrics.rs  mod.rs  monitoring.rs  performance.rs  pool.rs  pool_config.rs
stratum/src/services/metrics/: atomic.rs  calculated.rs  constant.rs  database.rs  hashrate_test.rs  mod.rs  prometheus_verification_test.rs  resource.rs  service.rs  snapshot.rs  timeseries.rs  user.rs
stratum/src/submission/: auth.rs  manager.rs  mod.rs  submit.rs
stratum/src/utils/: bitcoin_validation.rs  hash_utils.rs  memory_utils.rs  mod.rs  string_pool.rs  time_utils.rs
stratum/tests/: connect_target_validation_test.rs  database_integration_with_mock.rs  http_protocol_support_test.rs  mining_metrics_integration_test.rs  mock_miner_integration.rs  mock_pool_integration.rs  pool_config_service_test.rs
utils/metrics/: Cargo.toml  README.md
utils/metrics/benches/: recorder_benchmark.rs
utils/metrics/examples/: bounds_demo.rs  histogram_demo.rs  usage.rs
utils/metrics/src/: collector.rs  key.rs  lib.rs  recorder.rs
utils/metrics/src/types/: counter.rs  gauge.rs  histogram.rs  mod.rs
utils/metrics/tests/: histogram_tests.rs
