[package]
name = "loka-stratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "loka-stratum"
path = "bin/main.rs"

[features]
default = []
mock-pool = ["rand", "hex"]
mock-miner = ["rand", "hex"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
sea-orm = { workspace = true }
rand = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dependencies.loka-metrics]
workspace = true

# Database dependencies
[dependencies.loka-model]
path = "../model"

[dependencies.migration]
path = "../migration"

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"
rand = { workspace = true }

[[bench]]
name = "critical_path"
harness = false

[lints]
workspace = true